# todo-list

./: .env.example  README.md  pyproject.toml
backend/: app.py  config.py  database.py  tables.py
backend/base/: services.py
backend/task/: routes.py  schemas.py  services.py
backend/user/: routes.py  schemas.py  services.py
